ajout evolutions VA, réécriture index.html

--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@ div.tocify {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="DRAJESBFC.html">
+  <a href="index.html">
     <span class="fa fa-home"></span>
      
     Home
@@ -431,14 +431,14 @@ aux Sports (<strong>DRAJES</strong>) anime et coordonne les politiques
 publiques <strong>du sport</strong>, de <strong>la jeunesse</strong>, de
 <strong>la vie associative</strong>, de <strong>l’engagement
 civique</strong> et de <strong>l’éducation populaire</strong>.</p>
-<p>Elle s’appuie pour cela sur les données de la <strong><a
-href="https://injep.fr/linstitut/missions/mission-enquetes-donnees-et-etudes-statistiques-medes/">MEDES</a></strong>
-(Missions Enquêtes, Données et Etudes Statistiques) de <strong><a
-href="https://injep.fr/">l’Injep</a></strong> (Institut national de la
-Jeunesse et de l’éducation Populaire). Ce Service Statistique
+<p>Elle s’appuie pour cela sur les données de la <a
+href="https://injep.fr/linstitut/missions/mission-enquetes-donnees-et-etudes-statistiques-medes/"><strong>MEDES</strong></a>
+(Missions Enquêtes, Données et Etudes Statistiques) de <a
+href="https://injep.fr/"><strong>l’Injep</strong></a> (Institut national
+de la Jeunesse et de l’éducation Populaire). Ce Service Statistique
 Ministériel (<strong>SSM</strong>) fait partie du Service Statistique
-Public (<strong><a
-href="https://www.insee.fr/fr/information/1302192">SSP</a></strong>)
+Public (<a
+href="https://www.insee.fr/fr/information/1302192"><strong>SSP</strong></a>)
 chargé d’outiller les ministères sur leurs besoins d’études, d’enquêtes
 et de données. Porté par l’Insee, le SSP assure
 <strong>l’indépendance</strong>, la <strong>fiabilité</strong>, la
@@ -449,12 +449,34 @@ publiées.</p>
 <h2>1. <strong>Généralités</strong></h2>
 <div id="territoires" class="section level3">
 <h3>1.1 <a href="1.1_demo.html">Territoire(s)</a></h3>
+<p><span
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em>, <em>D</em><em>é</em><em>p</em><em>a</em><em>r</em><em>t</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em>, <em>E</em><em>P</em><em>C</em><em>I</em>, <em>B</em><em>V</em></span></p>
+<ul>
+<li><p>Population, communes, densité, pop QPV, carte</p></li>
+<li><p><a href="1.1_demo.html#découpages-administratifs">Découpages
+administratifs (ZRR,EPCI…) &amp; carte</a></p></li>
+<li><p><a href="1.1_demo.html#crte">Contrats de relance et transition
+écologique &amp; carte</a></p></li>
+</ul>
 </div>
 <div id="structure-de-la-population" class="section level3">
 <h3>1.2 <a href="1.2_structure.html">Structure de la population</a></h3>
+<p><span
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em>, <em>D</em><em>é</em><em>p</em><em>a</em><em>r</em><em>t</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em>, <em>E</em><em>P</em><em>C</em><em>I</em>, <em>B</em><em>V</em></span></p>
+<ul>
+<li><p>15-29 ans / + de 65 ans</p></li>
+<li><p>Indice de jeunesse, carte</p></li>
+</ul>
 </div>
 <div id="évolution-de-la-population" class="section level3">
 <h3>1.3 <a href="1.3_evol.html">Évolution de la population</a></h3>
+<p><span
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em>, <em>D</em><em>é</em><em>p</em><em>a</em><em>r</em><em>t</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em>, <em>E</em><em>P</em><em>C</em><em>I</em>, <em>B</em><em>V</em></span></p>
+<ul>
+<li><p>Sur 5 ans par tranche d’âge, carte</p></li>
+<li><p>Tendance longue (<span
+class="math inline"><em>S</em><em>p</em><em>a</em><em>r</em><em>k</em><em>l</em><em>i</em><em>n</em><em>e</em></span>)</p></li>
+</ul>
 <hr />
 </div>
 </div>
@@ -462,12 +484,36 @@ publiées.</p>
 <h2>2. <strong>Jeunesse</strong></h2>
 <div id="jeunesse-1" class="section level3">
 <h3>2.1 <a href="2.1_jeunesse.html">Jeunesse</a></h3>
+<p><span
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em>, <em>D</em><em>é</em><em>p</em><em>a</em><em>r</em><em>t</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em>, <em>E</em><em>P</em><em>C</em><em>I</em>, <em>B</em><em>V</em></span></p>
+<ul>
+<li><p>15-29 ans / 16-25 ans</p></li>
+<li><p>évolution sur 5 ans, carte</p></li>
+</ul>
 </div>
 <div id="préscolaire" class="section level3">
 <h3>2.2 <a href="2.2_presco.html">Préscolaire</a></h3>
+<p><span
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em>, <em>D</em><em>é</em><em>p</em><em>a</em><em>r</em><em>t</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em></span></p>
+<ul>
+<li><p>Accueil collectif / familial, carte</p></li>
+<li><p>Taux de scolarisation</p></li>
+<li><p>Assistantes maternelles et garde d’enfants à domicile</p></li>
+</ul>
 </div>
 <div id="accueils-collectifs-de-mineurs" class="section level3">
 <h3>2.3 <a href="2.3_ACM.html">Accueils collectifs de mineurs</a></h3>
+<p><span
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em>, <em>D</em><em>é</em><em>p</em><em>a</em><em>r</em><em>t</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em></span></p>
+<ul>
+<li><p>Lieux d’accueil et places par groupe d’âge sans
+hébergement</p></li>
+<li><p><a href="2.3_ACM.html#avec-hébergement">Avec hébergement,
+carte</a></p></li>
+<li><p><a href="2.3_ACM.html#scoutisme">Scoutisme</a></p></li>
+<li><p><a href="2.3_ACM.html#cartographie-interactive">Cartographie
+interactive</a></p></li>
+</ul>
 <hr />
 </div>
 </div>
@@ -475,9 +521,26 @@ publiées.</p>
 <h2>3. <strong>Engagement</strong></h2>
 <div id="vie-associative" class="section level3">
 <h3>3.1 <a href="3.1_VA.html">Vie associative</a></h3>
+<p><span
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em>, <em>D</em><em>é</em><em>p</em><em>a</em><em>r</em><em>t</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em>, <em>E</em><em>P</em><em>C</em><em>I</em>, <em>B</em><em>V</em></span></p>
+<ul>
+<li><p>Nombre d’associations et taux</p></li>
+<li><p>Domaine d’intervention, carte</p></li>
+</ul>
 </div>
 <div id="service-civique" class="section level3">
 <h3>3.2 <a href="3.2_SC.html">Service civique</a></h3>
+<p><span
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em>, <em>D</em><em>é</em><em>p</em><em>a</em><em>r</em><em>t</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em></span></p>
+<ul>
+<li><p>Nombre et évolution, domaine de mission, agrément</p></li>
+<li><p><a href="3.2_SC.html#départements">âge, sexe, diplôme, emploi,
+carte et flux</a></p></li>
+<li><p><a href="3.2_SC.html#engagement-international">Missions à
+l’étranger</a></p></li>
+<li><p><a href="3.2_SC.html#quartier-politique-de-la-ville">Volontaires
+issus de QPV</a></p></li>
+</ul>
 <hr />
 </div>
 </div>
@@ -485,9 +548,23 @@ publiées.</p>
 <h2>4. <strong>Formation</strong></h2>
 <div id="diplômes" class="section level3">
 <h3>4.1 <a href="4.1_diplomes.html">Diplômes</a></h3>
+<p><span
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em></span></p>
+<ul>
+<li><p>Diplômes délivrés par sexe et âge</p></li>
+<li><p><a
+href="4.1_diplomes.html#diplômes-non-professionnels-bafabafd">BAFA /
+BAFD</a> <span
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em>, <em>D</em><em>é</em><em>p</em><em>a</em><em>r</em><em>t</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em>, <em>S</em><em>p</em><em>a</em><em>r</em><em>k</em><em>l</em><em>i</em><em>n</em><em>e</em></span></p></li>
+<li><p><a href="4.1_diplomes.html#insertion-des-diplômés">Insertion des
+diplômés</a></p></li>
+</ul>
 </div>
 <div id="organismes-de-formation" class="section level3">
 <h3>4.2 <a href="4.2_OF3.html">Organismes de formation</a></h3>
+<ul>
+<li>Carte interactive des OF de la région</li>
+</ul>
 <hr />
 </div>
 </div>
@@ -495,18 +572,66 @@ publiées.</p>
 <h2>5. <strong>Sport</strong></h2>
 <div id="clubs-sportifs" class="section level3">
 <h3>5.1 <a href="5.1_clubs.html">Clubs sportifs</a></h3>
+<p><span
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em>, <em>D</em><em>é</em><em>p</em><em>a</em><em>r</em><em>t</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em>, <em>E</em><em>P</em><em>C</em><em>I</em>, <em>B</em><em>V</em></span></p>
+<ul>
+<li><p>Nombre et taux de clubs par fédération, carte et
+structure</p></li>
+<li><p>Poids des fédération et détail</p></li>
+<li><p>Licences par club</p></li>
+</ul>
 </div>
 <div id="licences-sportives" class="section level3">
 <h3>5.2 <a href="5.2_licences.html">Licences sportives</a></h3>
+<p><span
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em>, <em>D</em><em>é</em><em>p</em><em>a</em><em>r</em><em>t</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em>, <em>E</em><em>P</em><em>C</em><em>I</em>, <em>B</em><em>V</em></span></p>
+<ul>
+<li><p>Nombre et taux par fédération et par sexe, carte, structure et
+évolution <span
+class="math inline"><em>S</em><em>p</em><em>a</em><em>r</em><em>k</em><em>l</em><em>i</em><em>n</em><em>e</em></span></p></li>
+<li><p>Poids des fédération et détail</p></li>
+<li><p>Taux de licences féminines et sports sexués</p></li>
+</ul>
 </div>
 <div id="sport-de-nature" class="section level3">
 <h3>5.3 <a href="5.3_nature.html">Sport de nature</a></h3>
+<p><span
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em>, <em>D</em><em>é</em><em>p</em><em>a</em><em>r</em><em>t</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em></span></p>
+<ul>
+<li><p>Sites de sport nature par famille et détail</p></li>
+<li><p>Cartographie détaillée et par cluster</p></li>
+</ul>
 </div>
 <div id="piscines" class="section level3">
 <h3>5.4 <a href="5.4_piscines.html">Piscines</a></h3>
+<p><span
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em>, <em>D</em><em>é</em><em>p</em><em>a</em><em>r</em><em>t</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em>, <em>E</em><em>P</em><em>C</em><em>I</em>, <em>B</em><em>V</em></span></p>
+<ul>
+<li><p>Bassins publics, couverts, saisonniers</p></li>
+<li><p>Surface natatoire, carte</p></li>
+<li><p><a href="5.4_piscines.html#temps-daccès">Temps d’accès aux
+bassins</a></p></li>
+</ul>
 </div>
 <div id="équipements-sportifs" class="section level3">
 <h3>5.5 <a href="5.5_RES.html">Équipements sportifs</a></h3>
+<p><span
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em>, <em>D</em><em>é</em><em>p</em><em>a</em><em>r</em><em>t</em><em>e</em><em>m</em><em>e</em><em>n</em><em>t</em>, <em>E</em><em>P</em><em>C</em><em>I</em>, <em>B</em><em>V</em></span></p>
+<ul>
+<li><p>Nombre et taux d’équipements par grande famille</p></li>
+<li><p>Détail des équipements (couverts, proximité), carte</p></li>
+<li><p><a href="5.5_RES.html#analyse-des-territoires">Analyse des
+carences par territoire</a></p></li>
+</ul>
+</div>
+<div id="jeux-olympiques" class="section level3">
+<h3>5.6 <a href="5.6_JO.html">Jeux Olympiques</a></h3>
+<p><span
+class="math inline"><em>R</em><em>é</em><em>g</em><em>i</em><em>o</em><em>n</em></span></p>
+<ul>
+<li><p>Territoires Terres de Jeux</p></li>
+<li><p>Centres de préparations aux Jeux Olympiques</p></li>
+</ul>
 </div>
 </div>
 
