--- a/DRAJESBFC.html
+++ b/DRAJESBFC.html
@@ -322,7 +322,7 @@ div.tocify {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="DRAJESBFC.html">
+  <a href="index.html">
     <span class="fa fa-home"></span>
      
     Home
